# polymarket-mcp

./: CHANGELOG.md  CLI_TEST_REPORT.md  Cargo.toml  Makefile  QUICK_START.md  README.md  TESTING_GUIDE.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  main.rs  models.rs  polymarket_client.rs
tests/: integration_test.rs
