[package]
name = "polymarket-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Polymarket MCP Contributors"]
description = "MCP server for Polymarket prediction market data"
license = "MIT"
repository = "https://github.com/0x79de/polymarket-mcp"

[dependencies]
# Core MCP and async runtime
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "macros"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "io-std"] }
futures = "0.3"

# HTTP client and serialization
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration and utilities
config = "0.14"
dotenvy = "0.15"  # Replaces unmaintained dotenv (RUSTSEC-2021-0141)
clap = { version = "4.0", features = ["derive"] }
fastrand = "2.0"

# Date/time and errors
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }  # RUSTSEC-2025-0055 fix

# Force updated transitive dependencies for security fixes
slab = "0.4.11"  # RUSTSEC-2025-0047 fix

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.4"
